syntax = "proto3";
package com.vang.grpc;
option java_package = "com.vang.authsellerservice.grpc.gen";
option java_multiple_files = true;
option java_outer_classname = "GetAuthSellerServer";

service GetAuthSellerInfo {
  rpc getInfo(GetAuthSellerInfoRequest) returns (GetAuthSellerInfoReply);
}

message GetAuthSellerInfoRequest {
  int32 type = 1;
}

message GetAuthSellerInfoReply {
  bool status = 1;
  string username = 2;
  string role = 3;
}